// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<SectionControls> renders a disabled button as expected 1`] = `
<div
  className="section-controls-container"
>
  <a
    href=""
  >
    <button
      className="section-controls__button"
      disabled={true}
    >
      Previous Shōdan
    </button>
  </a>
  <a
    href="kuse"
  >
    <button
      className="section-controls__button"
      disabled={false}
    >
      Next Shōdan
    </button>
  </a>
</div>
`;

exports[`<SectionControls> renders as expected by default 1`] = `
<div
  className="section-controls-container"
>
  <a
    href="kiri"
  >
    <button
      className="section-controls__button"
      disabled={false}
    >
      Previous Shōdan
    </button>
  </a>
  <a
    href="kuse"
  >
    <button
      className="section-controls__button"
      disabled={false}
    >
      Next Shōdan
    </button>
  </a>
</div>
`;
